--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 html {
-    scroll-behavior: smooth !important;
+  scroll-behavior: smooth;
+  /* font-family: 'Raleway', sans-serif; */
 }
 
 @layer base {
@@ -17,7 +20,7 @@ html {
     }
 
     h1 {
-        @apply text-4xl sm:text-5xl md:text-6xl /* this is basically some responsiveness stuff: once yoi get past the small screen size (when not on mobile) use these other styles instead */
+        @apply text-4xl sm:text-5xl md:text-6xl /* this is basically some responsiveness stuff: once you get past the small screen size (when not on mobile) use these other styles instead */
     }
 
     h2 {
