added highlight effect on nav buttons when scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,4 +34,9 @@ html {
     button {
         @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
     }
+
+    /* to be applied when the user scrolls past a section of the page */
+    .activeNavLink {
+        @apply rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+    }
 }
